# hospital-quality-de

./: .gitignore  README.md  pyproject.toml  requirements.txt
dashboard/: app.py
data/processed/: capacity_by_state_2023.csv  national_trends.csv  staffing_by_state_2023.csv
data/raw/: README.md  grunddaten_2023.xlsx
powerbi/: BUILD_GUIDE.md  national_trends.csv  state_indicators_2023.csv  theme.json
results/: findings.json
scripts/: export_powerbi.py  run_analysis.py  run_etl.py
sql/queries/: capacity_by_state_2023.sql  national_trends.sql  staffing_by_state_2023.sql
src/hospital_quality/: __init__.py  analysis.py  build_db.py  charts.py  parse.py  reference.py
tests/: test_analysis.py  test_parse.py
